S50-S57: Major system audit, fixes, and documentation update
Backend (381 files, 522 tests, 0 failures, 215 endpoints):
- Module consolidation: course_management merged into course_authoring (S50)
- Rubric CRUD API + Quiz timeout + Certificate auto-generation (S51)
- SecurityContextHolder → @AuthenticationPrincipal in 10 controllers (S52)
- Design token unification: 0 generic blue-500/600/700 remaining (S52-S53)
- Quiz server-side shuffle + optimistic locking + 5 N+1 fixes (S54)
- Teacher revenue/invitation → real DB queries (S55)
- Gamification achievement fixes (COMPLETION, QUIZ, streak dedup) (S55)
- VideoProgress threshold fix 50→90% (0 test failures) (S56)
- TeacherStudent 3 endpoints → real DB queries (S56)
- V44 migration: seed TEACHER + STUDENT test accounts

Frontend (236 components, 508 TS files, 0 errors):
- 7 duplicate components deleted, GlobalState dead code cleanup (S50)
- Rubric mock → real API (S51)
- ~870 blue-600/700 → #0056D2/#004BB5 across 130+ files (S52)
- Focus ring + bg-blue-500 design token completion (S53)
- Homepage featured courses → real API (S54)
- 4 FE engagement mocks → empty arrays (S55)
- English → Vietnamese: 0 English text remaining (S56)

Documentation (S57):
- backend/README.md: 302→381 files, 202→522 tests, 114→215 endpoints
- FRONTEND_ARCHITECTURE.md: score 9.8→10/10, updated all counts
- CLAUDE.md: accurate module stats, endpoint counts
- .gitignore: fix migration whitelist path, add dump file exclusions

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>